Easter.css: prevent stretching the background on width > 2000px

--- a/inyoka_theme_ubuntuusers/static/style/special_day/easter.less
+++ b/inyoka_theme_ubuntuusers/static/style/special_day/easter.less
@@ -1,5 +1,6 @@
 .header {
     background-image: url(../../img/head/easter.svg);
+    background-size: cover; /* prevent stretching the background on width > 2000px */
 }
 
 /* as logo and menu icons sometimes overlap with background items, add an
